[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/cave.jpeg" type="Texture" id=1]
[ext_resource path="res://assets/pirate_girl.png" type="Texture" id=2]
[ext_resource path="res://assets/pirate_blue.png" type="Texture" id=3]
[ext_resource path="res://assets/pirate_red.png" type="Texture" id=4]
[ext_resource path="res://assets/groot.png" type="Texture" id=5]
[ext_resource path="res://Cave.gd" type="Script" id=6]
[ext_resource path="res://Pirate.gd" type="Script" id=7]
[ext_resource path="res://assets/sounds/richard/Richard-15.wav" type="AudioStream" id=30]
[ext_resource path="res://assets/sounds/richard/Richard-14.wav" type="AudioStream" id=32]
[ext_resource path="res://VoicesCave.gd" type="Script" id=43]

[sub_resource type="Animation" id=1]
resource_name = "GrootMove"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 94.5641, -137.327 ), Vector2( -139.781, -110.869 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "GoInsideCave"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("PirateRed:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 385.982, -12.7461 ), Vector2( -42.3909, -31.6449 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PirateGirl:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 144.891, -39.255 ), Vector2( -212.927, -56.8938 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PirateBlue:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 419.837, -117.216 ), Vector2( -69.0126, -127.296 ) ]
}

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("PirateRed:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 937.359, -8.25125 ), Vector2( 385.982, -12.7461 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PirateGirl:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 696.268, -34.7601 ), Vector2( 144.891, -39.255 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PirateBlue:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 971.214, -112.721 ), Vector2( 419.837, -117.216 ) ]
}

[node name="Cave" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.422204, 0.418476 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Groot" type="TextureRect" parent="."]
margin_left = 94.5641
margin_top = -137.327
margin_right = 574.564
margin_bottom = 854.673
rect_scale = Vector2( -0.366268, 0.334956 )
rect_pivot_offset = Vector2( 245.315, 573.331 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayerGroot" type="AnimationPlayer" parent="Groot"]
anims/GrootMove = SubResource( 1 )

[node name="PirateRed" type="TextureButton" parent="."]
margin_left = 385.982
margin_top = -12.7461
margin_right = 1171.98
margin_bottom = 1017.26
rect_scale = Vector2( 0.18884, 0.168363 )
rect_pivot_offset = Vector2( 373.811, 517.926 )
texture_normal = ExtResource( 4 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PirateBlue" type="TextureButton" parent="."]
margin_left = 419.837
margin_top = -117.216
margin_right = 1376.84
margin_bottom = 942.784
rect_scale = Vector2( 0.218227, 0.20337 )
rect_pivot_offset = Vector2( 483.133, 617.374 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PirateGirl" type="TextureButton" parent="."]
margin_left = 144.891
margin_top = -39.255
margin_right = 1101.89
margin_bottom = 1020.75
rect_scale = Vector2( 0.14968, 0.137996 )
rect_pivot_offset = Vector2( 477.248, 561.536 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayerPirates" type="AnimationPlayer" parent="."]
anims/GoInsideCave = SubResource( 2 )
anims/Move = SubResource( 3 )

[node name="Voices" type="Node2D" parent="."]
script = ExtResource( 43 )

[node name="Richard" type="Node2D" parent="Voices"]

[node name="RichardVoice14" type="AudioStreamPlayer" parent="Voices/Richard"]
stream = ExtResource( 32 )
volume_db = 8.0

[node name="RichardVoice15" type="AudioStreamPlayer" parent="Voices/Richard"]
stream = ExtResource( 30 )
volume_db = 8.0
[connection signal="animation_finished" from="Groot/AnimationPlayerGroot" to="." method="_on_AnimationPlayerGroot_animation_finished"]
[connection signal="pressed" from="PirateBlue" to="." method="_on_PirateBlue_pressed"]
[connection signal="animation_finished" from="AnimationPlayerPirates" to="." method="_on_AnimationPlayerPirates_animation_finished"]
